--- a/sass/utilities/_variables.scss
+++ b/sass/utilities/_variables.scss
@@ -1,4 +1,6 @@
-$primary: #329880;
+$primary: rebeccapurple;
 $secondary: #00154a;
 $black: #111;
-$white: #fff;
+$white: #fafafa;
+$silver: #e0e0e0;
+$gray: dimgray;
