--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -2,19 +2,20 @@
 
 body {
   font-family: "Roboto", sans-serif;
-  font-size: 14px;
+  font-size: 16px;
   color: $black;
   line-height: normal;
 }
 
 h1 {
   font-size: 4rem;
+  color: $white;
 }
 
 h2 {
   font-size: 2.25rem;
-  margin-bottom: 5px;
-  color: $secondary;
+  margin-bottom: 15px;
+  color: rebeccapurple;
 }
 
 h3 {
@@ -24,13 +25,14 @@ h3 {
 }
 
 p {
-  margin: 10px 0;
+  margin: 15px 0;
   font-size: 1.75rem;
+  color: dimgray;
 }
 
 a {
   color: $white;
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 footer a {
@@ -43,4 +45,8 @@ footer a {
   margin: 0 auto;
   position: relative;
   height: inherit;
+}
+
+ul {
+  list-style-type: none;
 }
