--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,70 +5,91 @@
 @import "base/base";
 
 body {
-  font-family: "Oxygen", Arial, Helvetica, sans-serif;
-  color: $white;
-  background: $white;
+	font-family: "Oxygen", Arial, Helvetica, sans-serif;
+	color: $white;
+	background: $white;
+}
+
+.cta {
+	padding: 10px;
+	border: 2px $primary solid;
+	// background-color: $primary;
+	font-weight: 700;
+	width: 175px;
+	min-width: 175px;
+	display: inline-block;
+	text-align: center;
+	color: $primary;
 }
 
 header {
-  display: flex;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  padding: 25px 0;
-  z-index: 1;
-  .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    .logo {
-      font-size: 2.5rem;
-      text-decoration: none;
-      font-weight: 700;
-    }
-    nav ul {
-      display: flex;
-      gap: 15px;
-    }
-  }
+	display: flex;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	padding: 25px 0;
+	z-index: 1;
+	.container {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		.logo {
+			font-size: 2.5rem;
+			text-decoration: none;
+			font-weight: 700;
+		}
+		nav ul {
+			display: flex;
+			gap: 15px;
+		}
+	}
 }
 
 .hero {
-  background: $black url("../images/hero.jpg") no-repeat center;
-  background-size: cover;
-  padding: 250px 0;
-  position: relative;
-  .overlay {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    background: rgba($black, 0.875);
-  }
-  .container {
-    color: $white;
-  }
+	background: $black url("../images/hero.jpg") no-repeat center;
+	background-size: cover;
+	padding: 250px 0;
+	position: relative;
+	.overlay {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+		background: rgba($black, 0.7);
+	}
+	.hero-content {
+		display: flex;
+		flex-direction: column;
+		gap: 10px;
+		align-content: flex-start;
+		p {
+			margin: 0;
+			color: $white;
+		}
+		.hero-ctas {
+		}
+	}
 }
 
 .about-me {
-  margin: 75px 0;
-  text-align: center;
-  .info {
-    ul {
-      display: flex;
-      color: rebeccapurple;
-      justify-content: center;
-      align-items: center;
-      gap: 10px;
-      font-size: 1.35rem;
-      font-weight: 700;
-    }
-  }
+	margin: 75px 0;
+	text-align: center;
+	.info {
+		ul {
+			display: flex;
+			color: rebeccapurple;
+			justify-content: center;
+			align-items: center;
+			gap: 10px;
+			font-size: 1.35rem;
+			font-weight: 700;
+		}
+	}
 }
 
 .projects {
-  padding: 100px 0;
-  background-color: rebeccapurple;
+	padding: 100px 0;
+	background-color: rebeccapurple;
 }
