--- a/sass/utilities/_variables.scss
+++ b/sass/utilities/_variables.scss
@@ -1,6 +1,12 @@
-$primary: rebeccapurple;
-$secondary: #00154a;
-$black: #111;
+$primary: #663399;
+$secondary: #2aa198;
+$accent: #8854d0;
+$complementary1: #ff5a5f;
+$complementary2: #aa88cc;
+$background: #1a1a1a;
+$black: #121212;
+$cards: #282828;
 $white: #fafafa;
-$silver: #e0e0e0;
-$gray: dimgray;
+$primary-text: #e0e0e0;
+$secondary-text: #b3b3b3;
+$gray: #282828;
