--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,32 +1,48 @@
 // Base styles for html elements and containers
 
 body {
-	font-family: "Roboto", sans-serif;
+	font-family: "Oxygen", Arial, Helvetica, sans-serif;
+	color: $primary-text;
 	font-size: 16px;
-	color: $black;
 	line-height: normal;
 }
 
 h1 {
-	font-size: 4rem;
+	font-size: 3rem;
 	color: $white;
+	margin-bottom: 10px;
+	span {
+		color: $secondary;
+	}
 }
 
 h2 {
-	font-size: 2.25rem;
-	color: rebeccapurple;
+	font-size: 2.15rem;
+	font-weight: 700;
+	text-transform: uppercase;
+	margin-bottom: 20px;
+	&:after {
+		content: "";
+		background-color: $primary;
+		display: block;
+		height: 5px;
+		margin: 2px 0 0 -2px;
+		width: 55px;
+	}
 }
 
 h3 {
-	font-size: 1.125em;
-	margin: 10px 0;
-	font-weight: 500;
+	color: $primary-text;
+	font-size: 1.75rem;
+	margin-bottom: 10px;
+	font-weight: 400;
 }
 
 p {
-	margin: 15px 0;
-	font-size: 1.75rem;
-	color: dimgray;
+	margin-bottom: 25px;
+	font-size: 1.2rem;
+	color: $primary-text;
+	line-height: 1.5;
 }
 
 a {
@@ -34,13 +50,59 @@ a {
 	text-decoration: none;
 }
 
-footer a {
-	color: $black;
+.cta {
+	background-color: $primary;
+	padding: 15px 10px;
+	font-weight: 700;
+	min-width: 175px;
+	display: inline-block;
+	text-align: center;
+	color: $white;
+	transition: all 0.25s linear;
+	&:hover {
+		background-color: $accent;
+		color: $white;
+	}
+}
+
+section {
+	background-color: $black;
+	padding: 70px 0;
+	&:nth-of-type(even) {
+		background-color: $background;
+	}
+}
+
+.card {
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	background-color: $cards;
+	padding: 30px 20px;
+	border-radius: 5px;
+	border-left: 5px $accent solid;
+	&-links {
+		display: flex;
+		gap: 10px;
+		&-link {
+			background-color: $black;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			height: 50px;
+			width: 50px;
+			border-radius: 50%;
+			svg {
+				font-size: 1.35em;
+				color: $secondary;
+			}
+		}
+	}
 }
 
 .container {
-	width: 95%;
-	max-width: 1200px;
+	width: 90%;
+	max-width: 1400px;
 	margin: 0 auto;
 	position: relative;
 	height: inherit;
@@ -48,4 +110,34 @@ footer a {
 
 ul {
 	list-style-type: none;
+}
+
+@media screen and (max-width: 1025px) {
+	h1 {
+		font-size: 2.5rem;
+	}
+	h2 {
+		font-size: 1.95rem;
+	}
+	h3 {
+		font-size: 1.55rem;
+	}
+	p {
+		font-size: 1.1rem;
+	}
+}
+
+@media screen and (max-width: 770px) {
+	h1 {
+		font-size: 2.25rem;
+	}
+	h2 {
+		font-size: 1.75rem;
+	}
+	h3 {
+		font-size: 1.35rem;
+	}
+	p {
+		font-size: 1rem;
+	}
 }
