--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,28 +1,15 @@
 @import url("https://fonts.googleapis.com/css2?family=Oxygen:wght@300;400;700&display=swap");
 @import "utilities/variables";
-
 @import "base/reset";
 @import "base/base";
 
-body {
-	font-family: "Oxygen", Arial, Helvetica, sans-serif;
-	color: $white;
-	background: $white;
-}
-
-.cta {
-	padding: 10px;
-	border: 2px $primary solid;
-	font-weight: 700;
-	width: 175px;
-	min-width: 175px;
-	display: inline-block;
-	text-align: center;
-	color: $primary;
-	transition: all 0.25s linear;
-	&:hover {
-		background-color: $primary;
-		color: $white;
+@keyframes floatRotate {
+	0%,
+	100% {
+		transform: translateY(0);
+	}
+	50% {
+		transform: translateY(-10px);
 	}
 }
 
@@ -52,61 +39,196 @@ header {
 }
 
 .hero {
-	background: $black url("../images/hero.jpg") no-repeat center;
-	background-size: cover;
 	padding: 250px 0;
-	position: relative;
-	.overlay {
-		position: absolute;
-		width: 100%;
-		height: 100%;
-		top: 0;
-		left: 0;
-		background: rgba($black, 0.8);
-	}
 	.hero-content {
 		display: flex;
-		flex-direction: column;
-		gap: 20px;
-		align-content: flex-start;
-		p {
-			margin: 0;
-			color: $white;
-		}
-		.hero-ctas {
+		justify-content: space-between;
+		gap: 5%;
+		&-info {
 			display: flex;
-			gap: 15px;
+			flex-direction: column;
+			gap: 45px;
+			align-content: flex-start;
+			flex: 0 0 45%;
+			&-ctas {
+				display: flex;
+				gap: 15px;
+			}
+		}
+		&-icons {
+			display: flex;
+			justify-content: center;
+			position: relative;
+			flex: 0 0 45%;
+			svg {
+				font-size: 4.5em;
+				display: inline-block;
+				animation: floatRotate 5s ease-in-out infinite;
+				position: absolute;
+				&.fa-html5 {
+					color: #e54c21;
+					top: -100px;
+					animation-delay: 200ms;
+				}
+				&.fa-css3-alt {
+					color: #214ce5;
+					top: 0;
+					right: 0;
+					animation-delay: 250ms;
+				}
+				&.fa-square-js {
+					color: #f7df1e;
+					bottom: -20px;
+					right: 10px;
+					animation-delay: 300ms;
+				}
+				&.fa-laptop-code {
+					top: 50%;
+					left: 50%;
+					margin-top: -11%;
+					margin-left: -11%;
+					font-size: 6.5em;
+					color: $white;
+				}
+				&.fa-react {
+					color: #61dafb;
+					bottom: -100px;
+					animation-delay: 350ms;
+				}
+				&.fa-php {
+					color: $primary;
+					bottom: -20px;
+					left: 10px;
+					animation-delay: 400ms;
+				}
+				&.fa-node {
+					color: #339933;
+					left: 0;
+					top: 10px;
+					animation-delay: 500ms;
+				}
+			}
 		}
 	}
 }
 
 .about-me {
-	margin: 75px 0;
-	text-align: center;
-	.info {
-		ul {
-			display: flex;
-			color: rebeccapurple;
-			justify-content: center;
-			align-items: center;
-			gap: 10px;
-			font-size: 1.35rem;
-			font-weight: 700;
+	padding: 75px 0;
+	&-content {
+		display: flex;
+		flex-direction: column;
+		gap: 30px;
+		&-bio {
+			h2 {
+				// color: $accent;
+			}
+		}
+		&-info {
+			ul {
+				display: flex;
+				color: $secondary-text;
+				justify-content: center;
+				align-items: center;
+				flex-direction: column;
+				background-color: $cards;
+				gap: 10px;
+				font-size: 1.35rem;
+				font-weight: 700;
+				padding: 30px 20px;
+				border-left: 5px $accent outset;
+				li:nth-child(2n) {
+					display: none;
+				}
+			}
 		}
 	}
 }
 
 .projects {
-	padding: 100px 0;
-	background-color: $primary;
+	padding: 75px 0;
+}
+
+.continuous-learning {
+	a {
+		display: inline-block;
+	}
+	.card-tall {
+		display: none;
+	}
+}
+
+.contact {
+	padding: 75px 0;
 }
 
 footer {
-	background-color: $primary;
+	background-color: $black;
 	padding: 25px 0;
 	text-align: center;
 	p {
 		color: $white;
 		margin: 0;
+	}
+}
+
+@media screen and (max-width: 1025px) {
+	.hero {
+		padding: 150px 0;
+		.hero-content {
+			flex-direction: column-reverse;
+			gap: 35px;
+			&-info {
+				flex: 0 0 auto;
+				gap: 35px;
+			}
+			&-icons {
+				flex: 0 0 auto;
+				justify-content: flex-start;
+				align-items: center;
+				gap: 25px;
+				svg {
+					position: static;
+					margin: 0;
+					font-size: 2em;
+					animation: none;
+					&.fa-laptop-code {
+						margin: 0;
+						font-size: 2.75em;
+					}
+				}
+			}
+		}
+	}
+}
+
+@media screen and (max-width: 770px) {
+	.hero {
+		padding: 125px 0;
+		.hero-content {
+			gap: 25px;
+			&-info {
+				&-ctas {
+					flex-direction: column;
+				}
+			}
+			&-icons {
+				justify-content: space-between;
+				gap: normal;
+				svg {
+					font-size: 1.65em;
+					&.fa-laptop-code {
+						font-size: 2.15em;
+					}
+				}
+			}
+		}
+	}
+	.continuous-learning {
+		.card-tall {
+			display: block;
+		}
+		.card-wide {
+			display: none;
+		}
 	}
 }
