--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -23,7 +23,7 @@ h2 {
 	margin-bottom: 20px;
 	&:after {
 		content: "";
-		background-color: $primary;
+		background-color: $accent;
 		display: block;
 		height: 5px;
 		margin: 2px 0 0 -2px;
@@ -32,10 +32,10 @@ h2 {
 }
 
 h3 {
-	color: $primary-text;
+	color: $accent;
 	font-size: 1.75rem;
 	margin-bottom: 10px;
-	font-weight: 400;
+	font-weight: 700;
 }
 
 p {
@@ -46,7 +46,7 @@ p {
 }
 
 a {
-	color: $white;
+	color: $primary-text;
 	text-decoration: none;
 }
 
@@ -78,9 +78,8 @@ section {
 	flex-direction: column;
 	gap: 20px;
 	background-color: $cards;
-	padding: 30px 20px;
+	padding: 30px;
 	border-radius: 5px;
-	border-left: 5px $accent solid;
 	&-links {
 		display: flex;
 		gap: 10px;
@@ -89,11 +88,11 @@ section {
 			display: flex;
 			align-items: center;
 			justify-content: center;
-			height: 50px;
-			width: 50px;
+			height: 45px;
+			width: 45px;
 			border-radius: 50%;
 			svg {
-				font-size: 1.35em;
+				font-size: 1.25em;
 				color: $secondary;
 			}
 		}
