--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,20 +21,36 @@ header {
 	width: 100%;
 	padding: 25px 0;
 	z-index: 1;
+	background-color: transparent;
 	.container {
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
 		.logo {
-			font-size: 2.5rem;
+			font-size: 2.25em;
+			text-align: center;
 			text-decoration: none;
 			font-weight: 700;
+			color: $primary;
+			text-transform: uppercase;
+			letter-spacing: 5px;
+			span {
+				display: block;
+				font-size: 1.15rem;
+				letter-spacing: 5px;
+			}
 		}
 		nav ul {
 			display: flex;
-			gap: 15px;
-			display: none;
+			gap: 25px;
+			li a {
+				font-size: 1.25em;
+				font-weight: 700;
+			}
 		}
+	}
+	&.active {
+		background-color: rgba($black, 0.95);
 	}
 }
 
@@ -50,6 +66,9 @@ header {
 			gap: 45px;
 			align-content: flex-start;
 			flex: 0 0 45%;
+			&-me p {
+				font-size: 1.65em;
+			}
 			&-ctas {
 				display: flex;
 				gap: 15px;
@@ -118,27 +137,15 @@ header {
 		display: flex;
 		flex-direction: column;
 		gap: 30px;
-		&-bio {
-			h2 {
-				// color: $accent;
-			}
-		}
 		&-info {
 			ul {
 				display: flex;
-				color: $secondary-text;
+				color: $secondary;
 				justify-content: center;
 				align-items: center;
-				flex-direction: column;
-				background-color: $cards;
 				gap: 10px;
-				font-size: 1.35rem;
+				font-size: 1.75rem;
 				font-weight: 700;
-				padding: 30px 20px;
-				border-left: 5px $accent outset;
-				li:nth-child(2n) {
-					display: none;
-				}
 			}
 		}
 	}
@@ -146,14 +153,43 @@ header {
 
 .projects {
 	padding: 75px 0;
+	.projects-content {
+		&-cards {
+			display: flex;
+			flex-wrap: wrap;
+			gap: 1rem;
+			.card {
+				flex: 0 1 calc(33.33% - 1rem);
+			}
+		}
+	}
 }
 
 .continuous-learning {
-	a {
-		display: inline-block;
-	}
-	.card-tall {
-		display: none;
+	.continuous-learning-content {
+		display: flex;
+		flex-direction: column;
+		gap: 35px;
+		&-progress {
+			display: flex;
+			justify-content: space-between;
+			align-items: center;
+			&-cards,
+			&-projects {
+				flex: 0 0 48%;
+			}
+			&-cards {
+				.card-tall {
+					display: none;
+				}
+				.card-wide {
+					display: block;
+					img {
+						width: 100%;
+					}
+				}
+			}
+		}
 	}
 }
 
