--- a/sass/style.scss
+++ b/sass/style.scss
@@ -22,6 +22,7 @@ header {
 	padding: 25px 0;
 	z-index: 1;
 	background-color: transparent;
+	transition: 0.125s background-color ease-in-out;
 	.container {
 		display: flex;
 		justify-content: space-between;
@@ -173,7 +174,6 @@ header {
 		&-progress {
 			display: flex;
 			justify-content: space-between;
-			align-items: center;
 			&-cards,
 			&-projects {
 				flex: 0 0 48%;
@@ -186,6 +186,21 @@ header {
 					display: block;
 					img {
 						width: 100%;
+					}
+				}
+			}
+			&-projects {
+				padding: 25px;
+				border-radius: 5px;
+				background-color: $cards;
+				a {
+					margin-bottom: 10px;
+					display: inline-block;
+					font-size: 1.25em;
+					color: $white;
+					svg {
+						color: $complementary2;
+						margin-right: 5px;
 					}
 				}
 			}
