--- a/sass/style.scss
+++ b/sass/style.scss
@@ -156,11 +156,11 @@ header {
 	padding: 75px 0;
 	.projects-content {
 		&-cards {
-			display: flex;
-			flex-wrap: wrap;
+			display: grid;
+			grid-template-columns: repeat(3, 1fr);
 			gap: 1rem;
 			.card {
-				flex: 0 1 calc(33.33% - 1rem);
+				// flex: 0 1 calc(33.33% - 1rem);
 			}
 		}
 	}
@@ -223,6 +223,16 @@ footer {
 }
 
 @media screen and (max-width: 1025px) {
+	header {
+		.container {
+			.logo {
+				font-size: 2.1em;
+				span {
+					font-size: 1.1rem;
+				}
+			}
+		}
+	}
 	nav {
 		display: none;
 	}
