updated hero paragraph font size for mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -348,6 +348,9 @@ footer {
 				&-ctas {
 					flex-direction: column;
 				}
+				&-me p {
+					font-size: 1.35em;
+				}
 			}
 			&-icons {
 				justify-content: space-between;
