updated logo letter spacing for mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -335,6 +335,7 @@ footer {
 		padding: 15px 0;
 		.container .logo {
 			font-size: 1.75em;
+			letter-spacing: 4px;
 			span {
 				font-size: 1rem;
 			}
