--- a/sass/style.scss
+++ b/sass/style.scss
@@ -48,6 +48,13 @@ header {
 			li a {
 				font-size: 1.25em;
 				font-weight: 700;
+				transition: 0.25s color ease-in-out;
+				&:hover {
+					color: $primary;
+				}
+				&.active {
+					color: $primary;
+				}
 			}
 		}
 	}
