--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -73,10 +73,15 @@ section {
 .card {
 	display: flex;
 	flex-direction: column;
-	gap: 20px;
+	gap: 25px;
 	background-color: $cards;
-	padding: 30px;
+	padding: 25px;
 	border-radius: 5px;
+	&-info {
+		h3 {
+			margin-bottom: 15px;
+		}
+	}
 	&-links {
 		display: flex;
 		gap: 10px;
