updated web dev logos

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -123,14 +123,14 @@ header {
 					bottom: -100px;
 					animation-delay: 350ms;
 				}
-				&.fa-php {
-					color: $primary;
+				&.fa-node {
+					color: #339933;
 					bottom: -20px;
 					left: 10px;
 					animation-delay: 400ms;
 				}
-				&.fa-node {
-					color: #339933;
+				&.fa-php {
+					color: #484c89;
 					left: 0;
 					top: 10px;
 					animation-delay: 500ms;
