content changes and updated project links

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -234,6 +234,8 @@ header {
 						font-size: 1.15em;
 						color: $white;
 						transition: 0.25s color ease-in-out;
+						align-self: flex-start;
+						flex-grow: 0;
 						&:hover {
 							color: $secondary;
 						}
